[tool.poetry]
name = "calculator-app"
version = "0.1.0"
description = ""
authors = ["Vigo <miroslav.viktorin@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
icecream = "^2.1.3"
customtkinter = "^5.2.2"
pylint = "^3.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
